@@ -1,117 +1,448 @@
-# Homework 1
-### Description: object-oriented design and implementation of a Design Pattern Code Generator.
-### Grade: 8% + bonus up to 5% (3% for generating code in two or more languages and 2% for using Eclipse Java AST parser for generating code).
-#### You can obtain this Git repo using the command git clone git clone git@bitbucket.org:cs474_spring2020/homework1.git.
-
-## Preliminaries
-As part of  homework assignment you will gain experience with creating and managing your Git repository, learn design patterns, create your model and the object-oriented design of a design pattern code generator, learn to create JUnit or Cucumber or FlatSpec tests, and you will create your SBT or Gradle build scripts. Doing this homework is essential for successful completion of the rest of this course, since all other homeworks and the course project will share the same features of this homework: branching, merging, committing, pushing your code into your Git repo, creating test cases and build scripts, and using various tools for diagnosing problems with your applications.
-
-First things first, you must create your account at [BitBucket](https://bitbucket.org/), a Git repo management system. It is imperative that you use your UIC email account that has the extension @uic.edu. Once you create an account with your UIC address, BibBucket will assign you an academic status that allows you to create private repos. Bitbucket users with free accounts cannot create private repos, which are essential for submitting your homeworks and the course project. If you have a problem with obtaining the academic account with your UIC.EDU email address, please contact Atlassian's license and billing team and ask them to enable your academic account by filling out the [Atlassian Bitbucket academic account request form](https://www.atlassian.com/software/views/bitbucket-academic-license).
-
-Your instructor created a team for this class named CS474_Spring2020. Please contact your TA, [Mr. Mohammed Siddiq](msiddi56@uic.edu) using your UIC.EDU email account and he will add you to the team repo as developers, since Mr.Siddiq already has the admin privileges. Please use your emails from the class registration roster to add you to the team and you will receive an invitation from BitBucket to join the team. Since it is a large class, please use your UIC email address for communications or Piazza and avoid emails from other accounts like funnybunny1998@gmail.com. If you don't receive a response within 24 hours, please contact us via Piazza, since it may be a case that your direct emails went to the spam folder.
-
-Next, if you haven't done so, you will install [IntelliJ](https://www.jetbrains.com/student/) with your academic license, the JDK, the Scala runtime and the IntelliJ Scala plugin, the [Simple Build Toolkit (SBT)](https://www.scala-sbt.org/1.x/docs/index.html) or the [Gradle build tool](https://gradle.org/) and make sure that you can create, compile, and run Java and Scala programs. Please make sure that you can run [various Java tools from your chosen JDK](https://docs.oracle.com/en/java/javase/index.html).
-
-In this and all consecutive homeworks and in the course project you will use logging and configuration management frameworks. You will comment your code extensively and supply logging statements at different logging levels (e.g., TRACE, INFO, ERROR) to record information at some salient points in the executions of your programs. All input and configuration variables must be supplied through configuration files -- hardcoding these values in the source code is generally prohibited and will be punished by taking a large percentage of points from your total grade! You are expected to use [Logback](https://logback.qos.ch/) and [SLFL4J](https://www.slf4j.org/) for logging and [Typesafe Conguration Library](https://github.com/lightbend/config) for managing configuration files. These and other libraries should be imported into your project using your script [build.sbt](https://www.scala-sbt.org/1.0/docs/Basic-Def-Examples.html) or [gradle script](https://docs.gradle.org/current/userguide/writing_build_scripts.html). These libraries and frameworks are widely used in the industry, so learning them is the time well spent to improve your resumes.
-
-## Overview
-In this homework, you will create an object-oriented design and implementation of a program that generates the implementation code of the design patterns. This homework combines two separate topics: design patterns for object-oriented programming and using object-oriented facilities of Java to realize your model of the design pattern program generator. That is, you will determine what program entities (e.g., classes and their methods) are needed as well as specific constraints on the implementation of these program entities (e.g., inheritance among classes or method calls in a certain sequence) for each design pattern. Next, you will create a model for a program generator with explicitely defined abstractions, translate your abstractions into design, refine your abstractions and explain the decomposition of your design into modules (e.g., packages, classes, interfaces, inner and anonymous classes). Finally, you will create a generator that emits the implementation of the chosen design pattern in a target language. This part can be accomplished by treating the resulting code as a record, i.e., where you manipulate the resulting Java program as a set of key/value strings. 
-
-Even though you can generate the resulting design pattern implementations in Java, you can also add support for other languages like Scala and Go and C++ for which you will receive an additional bonus of up to 3%. In addition, a bonus worth 1% will be given if you if you choose to use Java reflection package to construct the generated code or a bonus of 3% will be given to you if you use the [Eclipse Java parser](https://www.vogella.com/tutorials/EclipseJDT/article.html). Those who implement the code generation using both options will receive an additional bonus worth  4%.
+```text
+This project implements a cli that generates several design patterns described in the GoF book.
+Through the cli, users can make a selection of design pattern with several configurable options and 
+parameters (including package name, class/interface names, datatype and variables names among 
+others). Explanation for each pattern and the relationship among its reference types can be pulled 
+on demand. The program itself makes use of some of these patterns (Builder, Factory Method, 
+Prototype etc.), both directly and indirectly.
 
 
-This homework script is written using a retroscripting technique, in which the homework outlines are generally and loosely drawn, and the individual students improvise to create the implementation that fits their refined objectives. In doing so, students are expected to stay within the basic requirements of the homework and they are free to experiments. That is, it is impossible that two non-collaborating students will submit similar homeworks! Asking questions is important, **so please ask away on Piazza!**
+-----
+INDEX
+-----
+1. About Design Patterns
+2. Some Important Files
+3. Application Design
+    3.1 Gathering input from the user
+    3.2 Custom representation for classes and interfaces
+    3.3 The process of generating custom representation from input
+    3.4 Serializing custom representations to java source code
+4. Setup Instructions
+5. Usage Details
+    5.1 Available commands and usage help
+    5.2 Passing parameters and options to the cli
+    5.3 Generating multiple design patterns at once
+    5.4 Running from configuration file
+6. Demo
 
-## Functionality
-The user of your program generator is a programmer who needs to use design patterns in her program. Instead of writing the code for a design pattern, the programmer will invoke your Design Pattern Code Generator (DePaCoG) to enter the names of the classes that will represent entities in the desired design pattern. DePaCoG will take this input and it will generate the resulting code in a desired language for this pattern that can be added to the programmer's project and compiled. For example, consider a snippet of the Java code below that realizes a design pattern called Singleton.
-```java
-public class Singleton {
-	private static Singleton INSTANCE = null;
-	public static Singleton getInstance() { 
-		if(INSTANCE == null) INSTANCE = new Singleton();
-		return INSTANCE;}
-}
+
+------------------------
+1. About Design Patterns
+------------------------
+
+According to the GoF (Design Patterns: Elements of Reusable Object-Oriented Software) book, 
+"a design pattern names, abstracts, and identifies the key aspects of a common design structure that
+make it useful for creating a reusable object-oriented design. The design pattern identifies the 
+participating classes and instances, their roles and collaborations, and the distribution of 
+responsibilities. Each design pattern focuses on a particular object-oriented design problem or 
+issue. It describes when it applies, whether it can be applied in view of other design constraints, 
+and the consequences and trade-offs of its use".
+
+The design patterns discussed can be categorized into groups (more details in "Usage" Section):
+
+- Creational patterns
+  Creational design patterns abstract the instantiation process.
+  They help make a system independent of how its objects are created, composed, and represented.
+
+- Structural patterns
+  Structural patterns are concerned with how classes and objects are composed to form larger 
+  structures. Structural class patterns use inheritance to compose interfaces or implementations.
+
+- Behavioural patterns
+  Behavioral patterns are concerned with algorithms and assignment of responsibilities between 
+  objects. Behavioral patterns describe not just patterns of objects or classes but also the 
+  patterns of communication between them.
+
+It is important to note that these patterns when used correctly can result in cleaner more reusable
+and maintainable code base, however they are not intended to be applied directly in all scenarios
+without proper consideration of the problem at hand. Many times overusing design patterns can lead 
+to abuse. Also, the same design pattern may be implemented in a number of ways, each having its 
+merits and demerits. As per my understanding, there's a lot of debate on how some of these patterns
+should be implemented and even that some qualify as an Anti-pattern. 
+
+For example, the Singleton patter can be implemented in any one or combination of the below ways:
+  Eager initialization, Static block initialization, Lazy Initialization, hread Safe Singleton,
+  Bill Pugh Singleton Implementation, Using Reflection to destroy Singleton Pattern, Enum Singleton,
+  Serialization and Singleton
+
+
+-----------------------
+2. Some Important Files
+-----------------------
+
+    src/main/java/com/ashessin/cs474/hw1
+        
+        /generator                      sources for represnting custom design pattern refernce types
+            /behavioral                     cli and generator classes for behavioral design patterns
+            /creational                     cli and generator classes for creational design patterns
+            /structural                     cli and generator classes for structural design patterns
+        
+        /parser                         classes for parsing custom design pattern refernce types
+        
+        /utils                          helper classes
+            CliExtension.java           post-process results from a command interpretation
+            FileAuthor.java             saves file (*.java) assuming a maven project structure
+            LoggingReflection.java      for logging fields in class files
+            MavenInnvoker.java          for invoking mvn command to setup a java/scala project
+
+    src/main/resources/reference.conf   the default configuration file for reference
+
+
+---------------------
+3. Application Design
+---------------------
+
+The design pattern generator is built as a command line application that accepts user input.
+
+For illustration, I am using below arguments to generate the builder pattern for some Employee 
+builder design pattern with complex representation (many properties):
+Arguments are passed to `com.ashessin.cs474.hw1.Main` class.
+(see usage section for details)
+
+    -l=scala
+    -d=src/main/resources
+    builder
+    Builder
+    EmployeeBuilder
+    Employee
+    int,age;String,lastName;String,firstName;java.util.List<String>,responsibilities
+
+------------------------------------------------------
+3.1 Application Design - Gathering input from the user
+------------------------------------------------------
+
+For each design pattern there exists a pair of files within the package names 
+`com.ashessin.cs474.hw1.generator.behavioral`, `com.ashessin.cs474.hw1.generator.creational`, 
+`com.ashessin.cs474.hw1.generator.structural`.  
+The first type of file ending in prefix 'Q' contains the source for parsing the command line input 
+and also showing command usage instructions. All of these classes implement the 
+`java.util.concurrent.Callable` interface and make use of annotations for making the cli (supported 
+through the picocli library). These files are responsible for instantiating their
+respective design pattern generator class.  
+The second type of files ending in prefix 'Gen' take the parsed cli input and returns a custom 
+representation of interface (`DpInterfaceSource`) and class (`DpClassSource`) types associated with 
+the design pattern. The representations are specific to each design pattern and capture the 
+relationships as per some rules set in the same class body.
+
+13:55:22.880 |     main | INFO  | w1.generator.creational.BuilderQ | Generating representation for design pattern sources.
+13:55:22.887 |     main | INFO  | .generator.creational.BuilderGen | packageName=com.gof.creational.builder
+13:55:22.888 |     main | INFO  | .generator.creational.BuilderGen | abstractBuilderName=Builder
+13:55:22.889 |     main | INFO  | .generator.creational.BuilderGen | concreteBuilderName=EmployeeBuilder
+13:55:22.889 |     main | INFO  | .generator.creational.BuilderGen | concreteProductName=Employee
+13:55:22.889 |     main | INFO  | .generator.creational.BuilderGen | propertiesMap={age=int, lastName=String, firstName=String, responsibilities=java.util.List<String>}
+
+-------------------------------------------------------------------------
+3.2 Application Design - Custom representation for classes and interfaces
+-------------------------------------------------------------------------
+
+The custom top-level named reference type representations `DpClassSource` and `DpInterfaceSource`, 
+extend the `DpSource` interface and loosely represent a class and an interface along with their 
+members. These members can be fields/properties (`DpSourceField`) and methods (`DpSourceMethod`) in 
+the case of `DpClassSource` instances or just methods in case of `DpInterfaceSource`. Enums are used
+for modeling possible modifier values. All four of these implement a basic inner static Builder 
+pattern with mandatory parameters and lazy validation.  
+Additionally, to avoid a lot of boilerplate code associated with generating a `DpSourceMethod` when 
+representing an override, the `DpSourceMethod` declares a copying builder method (a variation on the
+copy constructor, often discussed along with the Prototype design pattern).  
+It is important to note that these custom representations are quite limiting when compared to what 
+one can accomplish within an actual class or interface declaration. For ex: there's no support for 
+annotations, parameterized class definitions, inner class etc., just to name a few of those. However
+this is not an issue since the user is supposed to extend on these generated design pattern files 
+manually later. Also, all of the design patterns can be implemented without the need for supporting 
+such extended representations.
+
+The process of generating custom representation from input  
+Lastly, `DpArrayList` extends the `java.util.ArrayList` class and overrides the `add()` method while
+also declaring a few other methods that are specific to the derived class. This class can be
+instantiated to hold objects of the derived type `DpSource`. This is a convenient data structure to 
+pass around since it can hold both the derived types (`DpInterfaceSource`, `DpClassSource`). The 
+'Gen' prefix classes make use of `DpArrayList` to add design pattern reference types as they are 
+built in their respective `main` method.
+
+13:55:22.902 |     main | DEBUG | .generator.creational.BuilderGen | DpClassSource[packageName='com.gof.creational.builder', name='Employee', javadoc='null', accessModifier=PUBLIC, modifier=NONE, implementsInterfaces=[], extendsClass='Object', methods=[], fields=[DpSourceField[name='age', type='int', value='null', javadoc='null', getter=true, setter=true, modifiers=[], accessModifier=PUBLIC], DpSourceField[name='lastName', type='String', value='null', javadoc='null', getter=true, setter=true, modifiers=[], accessModifier=PUBLIC], DpSourceField[name='firstName', type='String', value='null', javadoc='null', getter=true, setter=true, modifiers=[], accessModifier=PUBLIC], DpSourceField[name='responsibilities', type='java.util.List<String>', value='null', javadoc='null', getter=true, setter=true, modifiers=[], accessModifier=PUBLIC]]]
+13:55:22.908 |     main | DEBUG | .generator.creational.BuilderGen | DpClassSource[packageName='com.gof.creational.builder', name='Builder', javadoc='null', accessModifier=PUBLIC, modifier=ABSTRACT, implementsInterfaces=[], extendsClass='Object', methods=[DpSourceMethod[constructor=false, name='buildAge', javadoc='', accessModifier=PUBLIC, modifiers=[ABSTRACT], returnType='Builder', body='null', parameters={age=int}, inherited=false], DpSourceMethod[constructor=false, name='buildLastName', javadoc='', accessModifier=PUBLIC, modifiers=[ABSTRACT], returnType='Builder', body='null', parameters={lastName=String}, inherited=false], DpSourceMethod[constructor=false, name='buildFirstName', javadoc='', accessModifier=PUBLIC, modifiers=[ABSTRACT], returnType='Builder', body='null', parameters={firstName=String}, inherited=false], DpSourceMethod[constructor=false, name='buildResponsibilities', javadoc='', accessModifier=PUBLIC, modifiers=[ABSTRACT], returnType='Builder', body='null', parameters={responsibilities=java.util.List<String>}, inherited=false]], fields=[]]
+13:55:22.913 |     main | DEBUG | .generator.creational.BuilderGen | DpClassSource[packageName='com.gof.creational.builder', name='EmployeeBuilder', javadoc='null', accessModifier=PUBLIC, modifier=NONE, implementsInterfaces=[], extendsClass='Builder', methods=[DpSourceMethod[constructor=false, name='buildAge', javadoc='', accessModifier=PUBLIC, modifiers=[NONE], returnType='Builder', body='employee.setAge(age);return this;', parameters={age=int}, inherited=false], DpSourceMethod[constructor=false, name='buildLastName', javadoc='', accessModifier=PUBLIC, modifiers=[NONE], returnType='Builder', body='employee.setLastName(lastName);return this;', parameters={lastName=String}, inherited=false], DpSourceMethod[constructor=false, name='buildFirstName', javadoc='', accessModifier=PUBLIC, modifiers=[NONE], returnType='Builder', body='employee.setFirstName(firstName);return this;', parameters={firstName=String}, inherited=false], DpSourceMethod[constructor=false, name='buildResponsibilities', javadoc='', accessModifier=PUBLIC, modifiers=[NONE], returnType='Builder', body='employee.setResponsibilities(responsibilities);return this;', parameters={responsibilities=java.util.List<String>}, inherited=false]], fields=[DpSourceField[name='employee', type='Employee', value='null', javadoc='null', getter=false, setter=false, modifiers=[], accessModifier=PUBLIC]]]
+
+-------------------------------------------------------------------------------
+3.3 Application Design - Serializing custom representations to java source code 
+-------------------------------------------------------------------------------
+
+Ultimately, the custom design pattern type representations need to be converted into actual Java 
+source. For this we can use a parser like Javapoet (`com.squareup.javapoet`), JavaParser 
+(`com.github.javaparser`), Roaster (`org.jboss.forge.roaster`) or Eclipse JDT (`org.eclipse.jdt`).
+For the sake of flexibility, a Factory Method design pattern has been implemented which may be used
+by the requester to serialize `DpSource` types into respective Java Source representations with any 
+one of the four parsers mentioned above as backend. As for this project, only the Roaster 
+implementation is developed and ready for use. Roaster uses Eclipse JDT as a shaded library but is
+much easier to use in comparison and provides a fluent interface for building objects.
+
+13:55:22.917 |     main | INFO  | sin.cs474.hw1.utils.CliExtension | Processing 1 sub-commands.
+13:55:22.920 |     main | INFO  | .cs474.hw1.parser.DpSourceParser | Initializing backend parser.
+13:55:22.923 |     main | INFO  | hw1.parser.DpSourceParserRoaster | Initialized new Roaster backend.
+13:55:22.931 |     main | INFO  | sin.cs474.hw1.utils.CliExtension | Processing builder sub-command.
+13:55:22.935 |     main | INFO  | hw1.parser.DpSourceParserRoaster | Creating new design pattern class: com.gof.creational.builder.Builder
+13:55:22.935 | worker-2 | INFO  | hw1.parser.DpSourceParserRoaster | Creating new design pattern class: com.gof.creational.builder.EmployeeBuilder
+13:55:22.935 | worker-1 | INFO  | hw1.parser.DpSourceParserRoaster | Creating new design pattern class: com.gof.creational.builder.Employee
+
+For writing the java source files and processing cli results returned from the cli interpretations,
+helper classes are employed from the `com.ashessin.cs474.hw1.utils` package. Once the serialization
+has been performed, the files are written to the user defined location. The serialization and file 
+write operations are done in parallel for multiple files. There's also an attempt to initialize the 
+root folder of generated files as a maven project. The project may be further converted to scala 
+language through the use of the `scalagen` plugin.
+
+13:55:24.161 |     main | INFO  | essin.cs474.hw1.utils.FileAuthor | Attempting to write new file: src/main/resources/dpgen-output/src/main/java/com/gof/creational/builder/Builder.java
+13:55:24.164 | worker-1 | INFO  | essin.cs474.hw1.utils.FileAuthor | Attempting to write new file: src/main/resources/dpgen-output/src/main/java/com/gof/creational/builder/Employee.java
+13:55:24.164 | worker-2 | INFO  | essin.cs474.hw1.utils.FileAuthor | Attempting to write new file: src/main/resources/dpgen-output/src/main/java/com/gof/creational/builder/EmployeeBuilder.java
+13:55:24.171 | worker-2 | INFO  | essin.cs474.hw1.utils.FileAuthor | Wrote 564 bytes to file.
+13:55:24.171 | worker-1 | INFO  | essin.cs474.hw1.utils.FileAuthor | Wrote 744 bytes to file.
+13:55:24.172 |     main | INFO  | essin.cs474.hw1.utils.FileAuthor | Wrote 337 bytes to file.
+13:55:24.173 |     main | INFO  | sin.cs474.hw1.utils.CliExtension | Setting up dpgen-output as new Maven project.
+13:55:24.183 |     main | INFO  | sin.cs474.hw1.utils.MavenInvoker | Invoking mvn command: mvn -q archetype:generate \ -DgroupId=com.gof \ -DartifactId=dpgen-output \ -DarchetypeGroupId=pl.org.miki \ -DarchetypeArtifactId=java8-quickstart-archetype \ -DarchetypeVersion=1.0.0 \ -DinteractiveMode=false
+13:55:31.855 |     main | INFO  | sin.cs474.hw1.utils.CliExtension | Successfully setup dpgen-output as maven project.
+13:55:31.856 |     main | INFO  | sin.cs474.hw1.utils.CliExtension | Beginning Java to Scala transformation.
+13:55:31.857 |     main | INFO  | sin.cs474.hw1.utils.MavenInvoker | Invoking mvn command: mvn -q scalagen:main
+13:55:36.664 |     main | INFO  | sin.cs474.hw1.utils.CliExtension | Successfully converted dpgen-output source files to scala.
+13:55:36.664 |     main | INFO  | sin.cs474.hw1.utils.CliExtension | Generated design patterns are available in src/main/resources/dpgen-output directory.
+
+
+---------------------
+4. Setup Instructions
+---------------------
+
+1. Clone this repository using `git clone https://asing80@bitbucket.org/asing80/cs474-hw1.git`
+command.
+    
+2. Make sure you have maven installed and the `MAVEN_HOME`, `M2_HOME` environment variables point to
+the correct maven install location. On most Linux systems, `/usr/share/maven`. This can be check by
+using `echo $MAVEN_HOME` and `echo $M2_HOME` if running from a terminal.
+
+3. Change directory to the locally cloned repository, `cd cs474-hw1`.
+
+4. Run a sbt build along with test cases `sbt clean compile run`. For generating the jar file, use 
+`sbt assembly`. (optional)
+
+
+----------------
+5. Usage Details
+----------------
+
+The user can invoke the design pattern generator by using appropriate options and parameters on the 
+command line. Some example usage has been provided for reference towards the bottom of this section.
+
+-----------------------------------------------------
+5.1 Usage Details - Available commands and usage help
+-----------------------------------------------------
+
+To run the cli from jar file, use: `java -jar jdt-dpgen-assembly-0.1.jar -h` (shows below usage help)
+  
+Usage: jdt-dpgen [-hV] [-c[=<configFile>]] [-a=<artifactId>] [-d=<outputLocation>] [-g=<groupId>] 
+                 [-l=<outputLanguage>] COMMAND COMMAND...
+
+Generates GOF design patterns in Java and Scala language.
+
+  -l, --outputLanguage=<outputLanguage>
+                                          The output language for the implement.
+                                            Candidates: java, scala
+                                            Default: java
+  -d, --outputLocation=<outputLocation>
+                                          The folder/directory location for saving generated
+                                            files.
+                                            Default: ${sys:user.dir}
+  -a, --artifactId=<artifactId>
+                                          Unique base name of the primary artifact being
+                                            generated.
+                                            Default: dpgen-output
+  -g, --groupId=<groupId>
+                                          Unique identifier of the organization or group.
+                                            Default: com.gof
+  -c, --config[=<configFile>]
+                                          Path to input configuration file.
+  -h, --help                              Show this help message and exit.
+  -V, --version                           Print version information and exit.
+
+Commands:
+  singleton...............................Generates Singleton creational design pattern. Ensure
+                                            a class only has one instance, and provide a global
+                                            point of access to it.
+  prototype...............................Generates Prototype creational design pattern. Specify
+                                            the kinds of objects to create using a prototypical
+                                            instance, and create new objects by copying this
+                                            prototype.
+  builder.................................Generates Builder creational design pattern. Separate
+                                            the construction of a complex object from its
+                                            representation so that the same construction process
+                                            can create different representations.
+  factorymethod...........................Generates Factory Method creational design pattern.
+                                            Define an interface for creating an object, but let
+                                            subclasses decide which class to instantiate.
+                                            Factory Method lets a class defer instantiation to
+                                            subclass
+  abstractfactory.........................Generates Abstract Factory creational design pattern.
+                                            Provide an interface for creating families of
+                                            related or dependent objects without specifying
+                                            their concrete classes.
+  adapter.................................Generates Adapter structural design pattern. Convert
+                                            the interface of a class into another interface
+                                            clients expect. Adapter lets classes work together
+                                            that couldn't otherwise because of incompatible
+                                            interfaces.
+  bridge..................................Generates Bridge structural design pattern. Decouple
+                                            an abstraction from its implementation so that the
+                                            two can vary independently.
+  composite...............................Generates Composite structural design pattern. Compose
+                                            objects into tree structures to represent part-whole
+                                            hierarchies. Composite lets clients treat individual
+                                            objects and compositions of objects uniformly.
+  decorator...............................Generates Decorator structural design pattern. Attach
+                                            additional responsibilities to an object
+                                            dynamically. Decorators provide a flexible
+                                            alternative to sub-classing for extending
+                                            functionality.
+  facade..................................Generates Facade structural design pattern. Provide a
+                                            unified interface to a set of interfaces in a
+                                            subsystem. Facade defines a higher-level interface
+                                            that makes the subsystem easier to use.
+  flyweight...............................Generates Flyweight structural design pattern. Use
+                                            sharing to support large numbers of fine-grained
+                                            objects efficiently.
+  proxy...................................Generates Proxy structural design pattern. Provide a
+                                            surrogate or placeholder for another object to
+                                            control access to it.
+  chainofresponsibility...................Generates Chain Of Responsibility behavioral design
+                                            pattern. Avoid coupling the sender of a request to
+                                            its receiver by giving more than one object a chance
+                                            to handle the request. Chain the receiving objects
+                                            and pass the request along the chain until an object
+                                            handles it.
+  command.................................Generates Command behavioral design pattern.
+                                            Encapsulate a request as an object, thereby letting
+                                            you parameterize clients with different requests,
+                                            queue or log requests, and support undoable
+                                            operations.
+  interpreter.............................Generates Interpreter behavioral design pattern. Given
+                                            a language, define a representation for its grammar
+                                            along with an interpreter that uses the
+                                            representation to interpret sentences in the
+                                            language.
+  iterator................................Generates Iterator behavioral design pattern. Provide
+                                            a way to access the elements of an aggregate object
+                                            sequentially without exposing its underlying
+                                            representation.
+  mediator................................Generates Mediator behavioral design pattern. Define
+                                            an object that encapsulates how a set of objects
+                                            interact. Mediator promotes loose coupling by
+                                            keeping objects from referring to each other
+                                            explicitly, and it lets you vary their interaction
+                                            independently.
+  memento.................................Generates Memento behavioral design pattern. Without
+                                            violating encapsulation, capture and externalize an
+                                            object’s internal state so that the object can be
+                                            restored to this state later.
+  observer................................Generates Observer behavioral design pattern. Define a
+                                            one-to-many dependency between objects so that when
+                                            one object changes state, all its dependents are
+                                            notified and updated automatically.
+  state...................................Generates State behavioral design pattern. Allow an
+                                            object to alter its behavior when its internal state
+                                            changes. The object will appear to change its class
+  strategy................................Generates Strategy behavioral design pattern. Define a
+                                            family of algorithms, encapsulate each one, and make
+                                            them interchangeable. Strategy lets the algorithm
+                                            vary independently from clients that use it.
+  templatemethod..........................Generates Template Method behavioral design pattern.
+                                            Define the skeleton of an algorithm in an operation,
+                                            deferring some steps to subclasses. Template Method
+                                            lets subclasses redefine certain steps of an
+                                            algorithm without changing the algorithm’s structure.
+  visitor.................................Generates Visitor behavioral design pattern. Represent
+                                            an operation to be performed on the elements of an
+                                            object structure. Visitor lets you define a new
+                                            operation without changing the classes of the
+                                            elements on which it operates.
+
+You can also get usage help for specific design pattern subcommand, say the Builder pattern to get
+what options, paramters are avaialble.
+
+`java -jar jdt-dpgen-assembly-0.1.jar builder -h` (shows usage help for builder design pattern)
+
+Usage: dpgen builder [BuilderName ConcreteBuilderName ConcreteProductName ConcreteProductProperties]
+                     [-hV] [-p=<packageName>]
+
+Generates Builder creational design pattern. Separate the construction of a complex object from its 
+representation so that the same construction process can create different representations.
+
+      BuilderName                         The Builder specifies an abstract interface for
+                                            creating parts of a Product object.
+                                            Default: Builder
+      ConcreteBuilderName                 The ConcreteBuilder class constructs and assembles
+                                            parts of the product, implementing the Builder
+                                            interface.
+                                            Default: ConcreteBuilder
+      ConcreteProductName                 The Product class represents a complex object.
+                                            Default: Product
+      ConcreteProductProperties
+                                            Default: Object,property1;Object,property2
+  -p, --packageName=<packageName>
+                                            Default: com.gof.creational.builder
+  -h, --help                                Show this help message and exit.
+  -V, --version                             Print version information and exit.
+
+-------------------------------------------------------------
+5.2 Usage Details - Passing parameters and options to the cli
+-------------------------------------------------------------
+
+Notice that each command has default parameters and options already set and will use those in case 
+the user provides none. An example run of builder pattern genrator with user provided input was 
+already shown in the Application Design section. However, for non customized implementation, one 
+could also use:
+
+    -l=scala
+    -d=src/main/resources
+    builder
+
+Above we do not provide the cli with BuilderName, ConcreteBuilderName, ConcreteProductName, 
+ConcreteProductProperties paramters however, since the default values are avilable, they are used
+instead.
+
+---------------------------------------------------------------
+5.3 Usage Details - Generating multiple design patterns at once
+---------------------------------------------------------------
+
+If more than one design patterns need to be generated within the same package, that can be done by 
+passing them all at once to the cli.
+
+    -l=scala
+    -d=src/main/resources
+    builder
+    anstractfactory
+    strategy
+
+To generate all the design patterns from the jar file use:
+
+dpgen \
+    singleton prototype builder factorymethod abstractfactory \
+    adapter bridge composite decorator facade flyweight proxy \
+    chainofresponsibility command interpreter iterator mediator memento observer state strategy templatemethod visitor
+
+where dpgen is an alias, something like:
+    alias dpgen="/usr/lib/jvm/java-13/bin/java --enable-preview -jar jdt-dpgen-assembly-0.1.jar"
+
+---------------------------------------------------
+5.4 Usage Details - Running from configuration file
+---------------------------------------------------
+
+To run from configuration file, use the `-c` option followed by the path to the configuration file.
+    `java -jar jdt-dpgen-assembly-0.1.jar -c /path/to/configuration-file.conf`
+
+If no path is passes, the application tries to use the default internal configuration file.
+    `java -jar jdt-dpgen-assembly-0.1.jar -c`
+
+
+-------
+6. Demo
+-------
+
+https://asing80.people.uic.edu/cs441/hw2
+
 ```
-
-To generate this implementation, you need to know the structural organization of a design pattern, its components and relations among them. In this case, you can create a template for the pattern shown in the code snippet below. The programmer will enter the class name and it will be substituted in the template resulting in the actual implementation shown above.
-```java
-public class #$$CS474_Template$$# {
-	private static #$$CS474_Template$$# INSTANCE = null;
-	public static #$$CS474_Template$$# getInstance() { 
-		if(INSTANCE == null) INSTANCE = new #$$CS474_Template$$#();
-		return INSTANCE;}
-}
-```
-
-From the lectures we already learned a few patterns in the context of using OO polymorphism. In your DePaCoG you will implement the generation of the code for the following design patterns from the GoF book on Design Patterns: Elements of Reusable Object-Oriented Software published in 1994. You do not need to buy this book, [it is available for free](https://w3sdesign.com/GoF_Design_Patterns_Reference0100.pdf).
-
-Undegraduate students are expected to implement the following core design patterns:
-
-* Abstract factory groups object factories that have a common theme.
-* Builder constructs complex objects by separating construction and representation.
-* Factory method creates objects without specifying the exact class to create.
-* Facade provides a simplified interface to a large body of code.
-* Chain of responsibility delegates commands to a chain of processing objects.
-* Mediator allows loose coupling between classes by being the only class that has detailed knowledge of their methods.
-* Visitor separates an algorithm from an object structure by moving the hierarchy of methods into one object.
-* Template method defines the skeleton of an algorithm as an abstract class, allowing its subclasses to provide concrete behavior.
-
-
-Graduate students must implement the same design patterns as the undergraduate students in addition to the following design patterns:
-
-* Prototype creates objects by cloning an existing object.
-* Adapter allows classes with incompatible interfaces to work together by wrapping its own interface around that of an already existing class.
-* Bridge decouples an abstraction from its implementation so that the two can vary independently.
-* Composite composes zero-or-more similar objects so that they can be manipulated as one object.
-* Decorator dynamically adds/overrides behaviour in an existing method of an object.
-* Flyweight reduces the cost of creating and manipulating a large number of similar objects.
-* Proxy provides a placeholder for another object to control access, reduce cost, and reduce complexity.
-* Command creates objects which encapsulate actions and parameters.
-* Interpreter implements a specialized language.
-* Iterator accesses the elements of an object sequentially without exposing its underlying representation.
-* Memento provides the ability to restore an object to its previous state (undo).
-* Observer is a publish/subscribe pattern which allows a number of observer objects to see an event.
-* State allows an object to alter its behavior when its internal state changes.
-* Strategy allows one of a family of algorithms to be selected on-the-fly at runtime.
-
-Your DePaCog will itself be based on the number of design patterns, most likely, the abstract factory, the builder, the composite, the facade, and the template method. Not only this homework will force you to learn these patterns, but also you will learn how to use them to implement DePaCog and how to implement these patterns in more than one language to receive your bonus points.
-
-Even though it looks daunting to implement so many design patterns in such limited time, the actual effort is much smaller. DePaCoG should use the same abstraction for all design patterns; the different is how constituent elements are organized in each design pattern to achieve a desired goal. From this perspective, it is the same abstract operations in DePaCoG that take user-defined class/interface names and place them in proper positions in the templates for the code generation. The real benefit for students is not only that they learn design patterns, which are very valuable things to know to pass interviews, but also they elevate seemingly disjoint concepts of design patterns under the single roof of the abstraction.
-
-Your homework can be divided roughly into five steps. First, you learn the design patterns, their structure and how their constituent elements are organized and what your building blocks are for their realization in the target code. I suggest that you mock implementations of each pattern in IntelliJ and explore its classes, interfaces, and dependencies. Second, you create your own model that describes an abstract pattern structure and how you want to operate on it. Next, you will create an implementation of your design where you will use more than TWO different design patterns from the [GoF book](http://wiki.c2.com/?DesignPatternsBook). Fourth, you will create multiple unit tests using [JUnit framework](https://junit.org/junit5/) or some other framework like [Cucumber](https://cucumber.io/). Finally, you will run tests, run your program, generate the resulting pattern implementation in target languages, and report the results. 
-
-## Baseline
-To be considered for grading, your project should include at least one of your own written programs in Java (i.e., not copied examples where you renamed variables or refactored them similarly), your project should be buildable using the SBT or the Gradle, and your documentation must specify your chosen abstractions with links to specific modules where they are realized. Your documentation must include your design and model, the reasoning about pros and cons, explanations of your implementation and the chosen design patterns that you used to implement DePaCoG, and the results of your runs. Simply copying some open-source Java programs from examples and modifying them a bit (e.g., rename some variables) will result in desk-rejecting your submission.
-
-## Piazza collaboration
-You can post questions and replies, statements, comments, discussion, etc. on Piazza. For this homework, feel free to share your ideas, mistakes, code fragments, commands from scripts, and some of your technical solutions with the rest of the class, and you can ask and advise others using Piazza on where resources and sample programs can be found on the internet, how to resolve dependencies and configuration issues. When posting question and answers on Piazza, please select the appropriate folder, i.e., hw1 to ensure that all discussion threads can be easily located. Active participants and problem solvers will receive bonuses from the big brother :-) who is watching your exchanges on Piazza (i.e., your class instructor and your TA). However, *you must not describe your design or specific details related how your construct your models!*
-Since you can post your questions anonymously on pizza, there is no reason to be afraid to ask questions. Start working on this homework early and ask away!
-When you come to see your TA during his office hours don't ask him to debug your code - Mr.Siddiq **is prohibited** from doing so. You can discuss your design, abstractions, and show him your code to receive his feedback, but you should not ask him to solve problems for you!
-
-## Git logistics
-**This is an individual homework.** Separate repositories will be created for each of your homeworks and for the course project. You will fork the repository for this homework and your fork will be **private**, no one else besides you, the TA and your course instructor will have access to your fork. Please remember to grant a read access to your repository to your TA and your instructor. In future, for the team homeworks and the course project, you should grant the write access to your forkmates, but NOT for this homework. You can commit and push your code as many times as you want. Your code will not be visible and it should not be visible to other students (except for your forkmates for a team project, but not for this homework). When you push the code into the remote repo, your instructor and the TA will see your code in your separate private fork. Making your fork public or inviting other students to join your fork for an individual homework will result in losing your grade. For grading, only the latest push timed before the deadline will be considered. **If you push after the deadline, your grade for the homework will be zero**. For more information about using the Git and Bitbucket specifically, please use this [link as the starting point](https://confluence.atlassian.com/bitbucket/bitbucket-cloud-documentation-home-221448814.html). For those of you who struggle with the Git, I recommend a book by Ryan Hodson on Ry's Git Tutorial. The other book called Pro Git is written by Scott Chacon and Ben Straub and published by Apress and it is [freely available](https://git-scm.com/book/en/v2/). There are multiple videos on youtube that go into details of the Git organization and use.
-
-Please follow this naming convention while submitting your work : "Firstname_Lastname_hw1" without quotes, where you specify your first and last names **exactly as you are registered with the University system**, so that we can easily recognize your submission. I repeat, make sure that you will give both your TA and the course instructor the read/write access to your *private forked repository* so that we can leave the file feedback.txt with the explanation of the grade assigned to your homework.
-
-## Discussions and submission
-As it is mentioned above, you can post questions and replies, statements, comments, discussion, etc. on Piazza. Remember that you cannot share your code and your solutions privately, but you can ask and advise others using Piazza and StackOverflow or some other developer networks where resources and sample programs can be found on the Internet, how to resolve dependencies and configuration issues. Yet, your implementation should be your own and you cannot share it. Alternatively, you cannot copy and paste someone else's implementation and put your name on it. Your submissions will be checked for plagiarism. **Copying code from your classmates or from some sites on the Internet will result in severe academic penalties up to the termination of your enrollment in the University**. When posting question and answers on Piazza, please select the appropriate folder, i.e., hw1 to ensure that all discussion threads can be easily located.
-
-
-## Submission deadline and logistics
-Sunday, February 23 at 10PM CST via the bitbucket repository. Your submission will include the code for the program, your documentation with instructions and detailed explanations on how to assemble and deploy your program along with the results of your simulation and a document that explains these results based on the characteristics and the parameters of your models, and what the limitations of your implementation are. Again, do not forget, please make sure that you will give both your TAs and your instructor the read access to your private forked repository. Your name should be shown in your README.md file and other documents. Your code should compile and run from the command line using the commands **sbt clean compile test** and **sbt clean compile run** or the corresponding commands for Gradle. Also, you project should be IntelliJ friendly, i.e., your graders should be able to import your code into IntelliJ and run from there. Use .gitignore to exlude files that should not be pushed into the repo.
-
-
-## Evaluation criteria
-- the maximum grade for this homework is 8% with the bonus described above. Points are subtracted from this maximum grade: for example, saying that 2% is lost if some requirement is not completed means that the resulting grade will be 8%-2% => 6%; if the core homework functionality does not work, no bonus points will be given;
-- only some POJO classes are created and nothing else is done: up to 7% lost;
-- having less than five unit and/or integration tests: up to 5% lost;
-- missing comments and explanations from the submitted program: up to 5% lost;
-- logging is not used in your programs: up to 3% lost;
-- hardcoding the input values in the source code instead of using the suggested configuration libraries: up to 4% lost;
-- no instructions in README.md on how to install and run your program: up to 5% lost;
-- the program crashes without completing the core functionality: up to 6% lost;
-- no design and modeling documentation exists that explains your choices: up to 6% lost;
-- the deployment documentation exists but it is insufficient to understand how you assembled and deployed all components of the program: up to 5% lost;
-- the minimum grade for this homework cannot be less than zero.
-
-That's it, folks!
